--- a/index.html
+++ b/index.html
@@ -12,7 +12,38 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      Hello
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>Within the body elements, you can seperate the sections of the page with the <\section\> element.</li>
+        </ul>
+      </section>
+
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+          <ul>
+            <li>Enter your CSS notes here</li>
+          </ul>
+      </section>
+
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>'git status' checks what branch we are currently on as well showing any pending stange/commits changes.</li>
+          <li>'git checkout -b branch-name' creates a new branch and switches to it</li>
+          <li>'git add -A' stages all changes done</li>
+          <li>'git commit -m "commit coment" ' commits all the stanged changed to the current branch we are one</li>
+        </ul>
+      </section>
+
+      <section class="card" id="javascript-section">
+        <h2>Javascript</h2>
+        <ul>
+          <li>Enter your Javascript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
