Added CSS to the project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Iceberg&display=swap" rel="stylesheet">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -24,7 +26,10 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
           <ul>
-            <li>Enter your CSS notes here</li>
+            <li>A margin indicates how much space we want around the outside of an element.</li>
+            <li>A padding indicates how much space we want around the content inside an element.</li>
+            <li>You can use the special character * to signify that you want to format all elements on the page.</li>
+            <li>You can define an element on the page with a class in HTML that can later be used in CSS to format all the elements with that same class.</li>
           </ul>
       </section>
 
