--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
       <section class="card" id="javascript-section">
         <h2>Javascript</h2>
         <ul>
-          <li>Enter your Javascript notes here</li>
+          <li>A variable is a name container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Using the 'for' function, we can create a loop by assigning a variable(a) a value and linking it to another variable(b) so the loops repeats the same about of time as the variable(b)</li>
         </ul>
       </section>
     </main>
